infer-out/report.txt
#0
/usr/include/c++/12/bits/stl_pair.h:535: error: Unnecessary Copy Intermediate
  `std::forward()` is copied into field `first` but is not modified afterwards. Rather than copying into the field, move into it instead.
  533.                          bool>::type=true>
  534. 	constexpr pair(_U1&& __x, _U2&& __y)
  535. 	: first(std::forward<_U1>(__x)), second(std::forward<_U2>(__y)) { }
          ^
  536. 
  537.       template<typename _U1, typename _U2, typename

#1
/usr/include/c++/12/bits/stl_pair.h:535: error: Unnecessary Copy Intermediate
  `std::forward()` is copied into field `second` but is not modified afterwards. Rather than copying into the field, move into it instead.
  533.                          bool>::type=true>
  534. 	constexpr pair(_U1&& __x, _U2&& __y)
  535. 	: first(std::forward<_U1>(__x)), second(std::forward<_U2>(__y)) { }
                                         ^
  536. 
  537.       template<typename _U1, typename _U2, typename

#2
src/request/parsingReq.cpp:132: error: Unnecessary Copy Assignment
  `&cookieSessionId` is copy assigned into field `_sessionId` but is not modified afterwards. Rather than copying into the field, move into it instead.
  130. 
  131.         if (validSessionCookie)
  132.             client._sessionId = cookieSessionId;
                   ^
  133.         else {
  134.             RunServers::setSessionData(generateSessionIdCookie(sessionId), SessionData{});

Found 3 issues
                                          Issue Type(ISSUED_TYPE_ID): #
  Unnecessary Copy Intermediate(PULSE_UNNECESSARY_COPY_INTERMEDIATE): 2
      Unnecessary Copy Assignment(PULSE_UNNECESSARY_COPY_ASSIGNMENT): 1
